fbdev: Fix logic error in "offb" name match (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11112,6 +11112,7 @@
 	patches.kernel.org/6.12.54-128-crypto-atmel-Fix-dma_unmap_sg-direction.patch
 	patches.kernel.org/6.12.54-129-crypto-rockchip-Fix-dma_unmap_sg-nents-value.patch
 	patches.kernel.org/6.12.54-130-eventpoll-Replace-rwlock-with-spinlock.patch
+	patches.kernel.org/6.12.54-131-fbdev-Fix-logic-error-in-offb-name-match.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
