--- a/series.conf
+++ b/series.conf
@@ -11151,6 +11151,7 @@
 	patches.kernel.org/6.12.54-167-xsk-Harden-userspace-supplied-xdp_desc-valida.patch
 	patches.kernel.org/6.12.54-168-mtd-rawnand-fsmc-Default-to-autodetect-buswid.patch
 	patches.kernel.org/6.12.54-169-mmc-core-SPI-mode-remove-cmd7.patch
+	patches.kernel.org/6.12.54-170-mmc-mmc_spi-multiple-block-read-remove-read-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
