drm/xe/hw_engine_group: Fix double write lock release in error path (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11029,6 +11029,7 @@
 	patches.kernel.org/6.12.54-045-LoongArch-Init-acpi_gbl_use_global_lock-to-fa.patch
 	patches.kernel.org/6.12.54-046-ASoC-SOF-Intel-Read-the-LLP-via-the-associate.patch
 	patches.kernel.org/6.12.54-047-net-mlx4-prevent-potential-use-after-free-in-.patch
+	patches.kernel.org/6.12.54-048-drm-xe-hw_engine_group-Fix-double-write-lock-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
