--- a/series.conf
+++ b/series.conf
@@ -11102,6 +11102,7 @@
 	patches.kernel.org/6.12.54-118-drm-xe-uapi-loosen-used-tracking-restriction.patch
 	patches.kernel.org/6.12.54-119-drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
 	patches.kernel.org/6.12.54-120-blk-crypto-fix-missing-blktrace-bio-split-eve.patch
+	patches.kernel.org/6.12.54-121-btrfs-avoid-potential-out-of-bounds-in-btrfs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
