--- a/series.conf
+++ b/series.conf
@@ -11093,6 +11093,7 @@
 	patches.kernel.org/6.12.54-109-media-s5p-mfc-remove-an-unused-uninitialized-.patch
 	patches.kernel.org/6.12.54-110-media-venus-firmware-Use-correct-reset-sequen.patch
 	patches.kernel.org/6.12.54-111-media-vivid-fix-disappearing-Vendor-Command-W.patch
+	patches.kernel.org/6.12.54-112-media-ti-j721e-csi2rx-Use-devm_of_platform_po.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
