blk-crypto: fix missing blktrace bio split events (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11101,6 +11101,7 @@
 	patches.kernel.org/6.12.54-117-drm-nouveau-fix-bad-ret-code-in-nouveau_bo_mo.patch
 	patches.kernel.org/6.12.54-118-drm-xe-uapi-loosen-used-tracking-restriction.patch
 	patches.kernel.org/6.12.54-119-drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
+	patches.kernel.org/6.12.54-120-blk-crypto-fix-missing-blktrace-bio-split-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
