spi: cadence-quadspi: Flush posted register writes before INDAC access (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11171,6 +11171,7 @@
 	patches.kernel.org/6.12.54-187-PCI-tegra194-Fix-broken-tegra_pcie_ep_raise_m.patch
 	patches.kernel.org/6.12.54-188-PCI-tegra194-Handle-errors-in-BPMP-response.patch
 	patches.kernel.org/6.12.54-189-PCI-tegra194-Reset-BARs-when-running-in-PCIe-.patch
+	patches.kernel.org/6.12.54-190-spi-cadence-quadspi-Flush-posted-register-wri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
