--- a/series.conf
+++ b/series.conf
@@ -10985,6 +10985,7 @@
 	patches.kernel.org/6.12.54-001-fs-always-return-zero-on-success-from-replace.patch
 	patches.kernel.org/6.12.54-002-fscontext-do-not-consume-log-entries-when-ret.patch
 	patches.kernel.org/6.12.54-003-arm64-map-_text-_stext-virtual-address-range-.patch
+	patches.kernel.org/6.12.54-004-rseq-Protect-event-mask-against-membarrier-IP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
