--- a/series.conf
+++ b/series.conf
@@ -11221,6 +11221,7 @@
 	patches.kernel.org/6.12.54-237-cpufreq-Make-drivers-using-CPUFREQ_ETERNAL-sp.patch
 	patches.kernel.org/6.12.54-238-KVM-x86-Advertise-SRSO_USER_KERNEL_NO-to-user.patch
 	patches.kernel.org/6.12.54-239-statmount-don-t-call-path_put-under-namespace.patch
+	patches.kernel.org/6.12.54-240-arm64-mte-Do-not-flag-the-zero-page-as-PG_mte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
