x86/umip: Fix decoding of register forms of 0F 01 (SGDT and SIDT aliases) (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11176,6 +11176,7 @@
 	patches.kernel.org/6.12.54-192-spi-cadence-quadspi-Fix-cqspi_setup_flash.patch
 	patches.kernel.org/6.12.54-193-x86-fred-Remove-ENDBR64-from-FRED-entry-point.patch
 	patches.kernel.org/6.12.54-194-x86-umip-Check-that-the-instruction-opcode-is.patch
+	patches.kernel.org/6.12.54-195-x86-umip-Fix-decoding-of-register-forms-of-0F.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
