--- a/series.conf
+++ b/series.conf
@@ -11043,6 +11043,7 @@
 	patches.kernel.org/6.12.54-059-perf-python-split-Clang-options-when-invoking.patch
 	patches.kernel.org/6.12.54-060-tcp-take-care-of-zero-tp-window_clamp-in-tcp_.patch
 	patches.kernel.org/6.12.54-061-mailbox-zynqmp-ipi-Remove-redundant-mbox_cont.patch
+	patches.kernel.org/6.12.54-062-mailbox-zynqmp-ipi-Remove-dev.parent-check-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
