media: venus: firmware: Use correct reset sequence for IRIS2 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11091,6 +11091,7 @@
 	patches.kernel.org/6.12.54-107-media-pci-ivtv-Add-missing-check-after-DMA-ma.patch
 	patches.kernel.org/6.12.54-108-media-pci-mg4b-fix-uninitialized-iio-scan-dat.patch
 	patches.kernel.org/6.12.54-109-media-s5p-mfc-remove-an-unused-uninitialized-.patch
+	patches.kernel.org/6.12.54-110-media-venus-firmware-Use-correct-reset-sequen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
