--- a/series.conf
+++ b/series.conf
@@ -11119,6 +11119,7 @@
 	patches.kernel.org/6.12.54-135-fuse-fix-livelock-in-synchronous-file-put-fro.patch
 	patches.kernel.org/6.12.54-136-iio-adc-pac1934-fix-channel-disable-configura.patch
 	patches.kernel.org/6.12.54-137-iio-dac-ad5360-use-int-type-to-store-negative.patch
+	patches.kernel.org/6.12.54-138-iio-dac-ad5421-use-int-type-to-store-negative.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
