iio: xilinx-ams: Fix AMS_ALARM_THR_DIRECT_MASK (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11121,6 +11121,7 @@
 	patches.kernel.org/6.12.54-137-iio-dac-ad5360-use-int-type-to-store-negative.patch
 	patches.kernel.org/6.12.54-138-iio-dac-ad5421-use-int-type-to-store-negative.patch
 	patches.kernel.org/6.12.54-139-iio-frequency-adf4350-Fix-prescaler-usage.patch
+	patches.kernel.org/6.12.54-140-iio-xilinx-ams-Fix-AMS_ALARM_THR_DIRECT_MASK.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
