wifi: ath11k: HAL SRNG: don't deinitialize and re-initialize again (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11183,6 +11183,7 @@
 	patches.kernel.org/6.12.54-199-s390-Add-Wno-pointer-sign-to-KBUILD_CFLAGS_DE.patch
 	patches.kernel.org/6.12.54-200-slab-prevent-warnings-when-slab-obj_exts-vect.patch
 	patches.kernel.org/6.12.54-201-slab-mark-slab-obj_exts-allocation-failures-u.patch
+	patches.kernel.org/6.12.54-202-wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
