--- a/series.conf
+++ b/series.conf
@@ -11114,6 +11114,7 @@
 	patches.kernel.org/6.12.54-130-eventpoll-Replace-rwlock-with-spinlock.patch
 	patches.kernel.org/6.12.54-131-fbdev-Fix-logic-error-in-offb-name-match.patch
 	patches.kernel.org/6.12.54-132-fs-ntfs3-Fix-a-resource-leak-bug-in-wnd_exten.patch
+	patches.kernel.org/6.12.54-133-fs-quota-create-dedicated-workqueue-for-quota.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
