--- a/series.conf
+++ b/series.conf
@@ -11196,6 +11196,7 @@
 	patches.kernel.org/6.12.54-212-ext4-add-ext4_sb_bread_nofail-helper-function.patch
 	patches.kernel.org/6.12.54-213-ext4-verify-orphan-file-size-is-not-too-big.patch
 	patches.kernel.org/6.12.54-214-ext4-increase-i_disksize-to-offset-len-in-ext.patch
+	patches.kernel.org/6.12.54-215-ext4-correctly-handle-queries-for-metadata-ma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
