KVM: SVM: Emulate PERF_CNTR_GLOBAL_STATUS_SET for PerfMonV2 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -10990,6 +10990,7 @@
 	patches.kernel.org/6.12.54-006-clocksource-drivers-clps711x-Fix-resource-lea.patch
 	patches.kernel.org/6.12.54-007-page_pool-Fix-PP_MAGIC_MASK-to-avoid-crashing.patch
 	patches.kernel.org/6.12.54-008-dma-mapping-fix-direction-in-dma_alloc-direct.patch
+	patches.kernel.org/6.12.54-009-KVM-SVM-Emulate-PERF_CNTR_GLOBAL_STATUS_SET-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
