selftests/mm: skip soft-dirty tests when CONFIG_MEM_SOFT_DIRTY is disabled (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11204,6 +11204,7 @@
 	patches.kernel.org/6.12.54-220-ACPICA-Allow-to-skip-Global-Lock-initializati.patch
 	patches.kernel.org/6.12.54-221-ext4-free-orphan-info-with-kvfree.patch
 	patches.kernel.org/6.12.54-222-lib-crypto-curve25519-hacl64-Disable-KASAN-wi.patch
+	patches.kernel.org/6.12.54-223-selftests-mm-skip-soft-dirty-tests-when-CONFI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
