--- a/series.conf
+++ b/series.conf
@@ -11142,6 +11142,7 @@
 	patches.kernel.org/6.12.54-158-pwm-berlin-Fix-wrong-register-in-suspend-resu.patch
 	patches.kernel.org/6.12.54-159-Revert-ipmi-fix-msg-stack-when-IPMI-is-discon.patch
 	patches.kernel.org/6.12.54-160-sched-deadline-Fix-race-in-push_dl_task.patch
+	patches.kernel.org/6.12.54-161-scsi-hpsa-Fix-potential-memory-leak-in-hpsa_b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
