ASoC: SOF: Intel: Read the LLP via the associated Link DMA channel (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11027,6 +11027,7 @@
 	patches.kernel.org/6.12.54-043-ASoC-SOF-Intel-hda-pcm-Place-the-constraint-o.patch
 	patches.kernel.org/6.12.54-044-LoongArch-Add-cflag-fno-isolate-erroneous-pat.patch
 	patches.kernel.org/6.12.54-045-LoongArch-Init-acpi_gbl_use_global_lock-to-fa.patch
+	patches.kernel.org/6.12.54-046-ASoC-SOF-Intel-Read-the-LLP-via-the-associate.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
