media: pci: mg4b: fix uninitialized iio scan data (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11089,6 +11089,7 @@
 	patches.kernel.org/6.12.54-105-media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 	patches.kernel.org/6.12.54-106-media-mc-Fix-MUST_CONNECT-handling-for-pads-w.patch
 	patches.kernel.org/6.12.54-107-media-pci-ivtv-Add-missing-check-after-DMA-ma.patch
+	patches.kernel.org/6.12.54-108-media-pci-mg4b-fix-uninitialized-iio-scan-dat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
