copy_file_range: limit size if in compat mode (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11246,6 +11246,7 @@
 	patches.kernel.org/6.12.54-262-s390-bpf-Write-back-tail-call-counter-for-BPF.patch
 	patches.kernel.org/6.12.54-263-irqchip-sifive-plic-Make-use-of-__assign_bit.patch
 	patches.kernel.org/6.12.54-264-irqchip-sifive-plic-Avoid-interrupt-ID-0-hand.patch
+	patches.kernel.org/6.12.54-265-copy_file_range-limit-size-if-in-compat-mode.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
