media: i2c: mt9v111: fix incorrect type for ret (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11086,6 +11086,7 @@
 	patches.kernel.org/6.12.54-102-firmware-meson_sm-fix-device-leak-at-probe.patch
 	patches.kernel.org/6.12.54-103-media-cec-extron-da-hd-4k-plus-drop-external-.patch
 	patches.kernel.org/6.12.54-104-media-cx18-Add-missing-check-after-DMA-map.patch
+	patches.kernel.org/6.12.54-105-media-i2c-mt9v111-fix-incorrect-type-for-ret.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
