--- a/series.conf
+++ b/series.conf
@@ -11060,6 +11060,7 @@
 	patches.kernel.org/6.12.54-076-crypto-essiv-Check-ssize-for-decryption-and-i.patch
 	patches.kernel.org/6.12.54-077-cifs-Fix-copy_to_iter-return-value-check.patch
 	patches.kernel.org/6.12.54-078-smb-client-fix-missing-timestamp-updates-afte.patch
+	patches.kernel.org/6.12.54-079-cifs-Query-EA-LXMOD-in-cifs_query_path_info-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
