drm/amd/display: Enable Dynamic DTBCLK Switch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11100,6 +11100,7 @@
 	patches.kernel.org/6.12.54-116-drm-rcar-du-dsi-Fix-1-2-3-lane-support.patch
 	patches.kernel.org/6.12.54-117-drm-nouveau-fix-bad-ret-code-in-nouveau_bo_mo.patch
 	patches.kernel.org/6.12.54-118-drm-xe-uapi-loosen-used-tracking-restriction.patch
+	patches.kernel.org/6.12.54-119-drm-amd-display-Enable-Dynamic-DTBCLK-Switch.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
