--- a/series.conf
+++ b/series.conf
@@ -10991,6 +10991,7 @@
 	patches.kernel.org/6.12.54-007-page_pool-Fix-PP_MAGIC_MASK-to-avoid-crashing.patch
 	patches.kernel.org/6.12.54-008-dma-mapping-fix-direction-in-dma_alloc-direct.patch
 	patches.kernel.org/6.12.54-009-KVM-SVM-Emulate-PERF_CNTR_GLOBAL_STATUS_SET-f.patch
+	patches.kernel.org/6.12.54-010-iio-frequency-adf4350-Fix-ADF4350_REG3_12BIT_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
