--- a/series.conf
+++ b/series.conf
@@ -11156,6 +11156,7 @@
 	patches.kernel.org/6.12.54-172-rtc-interface-Ensure-alarm-irq-is-enabled-whe.patch
 	patches.kernel.org/6.12.54-173-rtc-interface-Fix-long-standing-race-when-set.patch
 	patches.kernel.org/6.12.54-174-rseq-selftests-Use-weak-symbol-reference-not-.patch
+	patches.kernel.org/6.12.54-175-PCI-xilinx-nwl-Fix-ECAM-programming.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
