mfd: intel_soc_pmic_chtdc_ti: Fix invalid regmap-config max_register value (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11214,6 +11214,7 @@
 	patches.kernel.org/6.12.54-230-PCI-endpoint-pci-epf-test-Add-NULL-check-for-.patch
 	patches.kernel.org/6.12.54-231-ASoC-SOF-ipc4-pcm-Enable-delay-reporting-for-.patch
 	patches.kernel.org/6.12.54-232-ASoC-SOF-ipc4-pcm-fix-delay-calculation-when-.patch
+	patches.kernel.org/6.12.54-233-mfd-intel_soc_pmic_chtdc_ti-Fix-invalid-regma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
