cifs: Fix copy_to_iter return value check (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -11058,6 +11058,7 @@
 	patches.kernel.org/6.12.54-074-bridge-br_vlan_fill_forward_path_pvid-use-br_.patch
 	patches.kernel.org/6.12.54-075-selftests-netfilter-query-conntrack-state-to-.patch
 	patches.kernel.org/6.12.54-076-crypto-essiv-Check-ssize-for-decryption-and-i.patch
+	patches.kernel.org/6.12.54-077-cifs-Fix-copy_to_iter-return-value-check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
