series.conf: cleanup
- update upstream reference and move into sorted section:
  patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch.
- update to accepted version, update upstream reference and move into sorted section:
  patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch.

--- a/series.conf
+++ b/series.conf
@@ -57,6 +57,11 @@
 	# sorted patches
 	########################################################
 
+	patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch
+
+	# netdev/net main
+	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
+
 	# gregkh/usb usb-linus
 	patches.suse/usb-xhci-pci-Fix-USB2-only-root-hub-registration.patch
 
@@ -79,8 +84,6 @@
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
-	patches.suse/udp-do-not-use-skb_release_head_state-before-skb_att.patch
-	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
