--- a/blacklist.conf
+++ b/blacklist.conf
@@ -29,3 +29,4 @@ cf80c02a9fdb6c5bc8508beb6a0f6a1294fc32f6 # build failure
 cee686775f9cd4eae31f3c1f7ec24b2048082667 # conflicts
 56098a4505e7ba54c7942c82eeca8de522c8c2ee # documentation
 aa5fc4362fac9351557eb27c745579159a2e4520 # build failure
+32f072d9eaf9c31c2b0527a4a3370570a731e3cc # just formating
