--- a/series.conf
+++ b/series.conf
@@ -28327,6 +28327,7 @@
 	patches.suse/selftests-bpf-Workaround-strict-bpf_lsm-return-value.patch
 	patches.suse/bpf-Fail-verification-for-sign-extension-of-packet-d.patch
 	patches.suse/selftests-bpf-Add-tests-for-ldsx-of-pkt-data-data_en.patch
+	patches.suse/selftests-bpf-Fix-compile-error-from-rlim_t-in-sk_st.patch
 	patches.suse/selftests-bpf-Fix-error-compiling-bpf_iter_setsockop.patch
 	patches.suse/selftests-bpf-Fix-compiling-parse_tcp_hdr_opt.c-with.patch
 	patches.suse/selftests-bpf-Fix-compiling-kfree_skb.c-with-musl-li.patch
