--- a/series.conf
+++ b/series.conf
@@ -28337,6 +28337,7 @@
 	patches.suse/selftests-bpf-Fix-errors-compiling-lwt_redirect.c-wi.patch
 	patches.suse/selftests-bpf-Fix-errors-compiling-decap_sanity.c-wi.patch
 	patches.suse/selftests-bpf-Fix-errors-compiling-cg_storage_multi..patch
+	patches.suse/selftests-bpf-Fix-error-compiling-test_lru_map.c.patch
 	patches.suse/selftests-bpf-Fix-error-compiling-tc_redirect.c-with.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
