--- a/series.conf
+++ b/series.conf
@@ -28339,6 +28339,7 @@
 	patches.suse/selftests-bpf-Fix-errors-compiling-cg_storage_multi..patch
 	patches.suse/selftests-bpf-Fix-error-compiling-test_lru_map.c.patch
 	patches.suse/selftests-bpf-Fix-C-compile-error-from-missing-_Bool.patch
+	patches.suse/selftests-bpf-Fix-redefinition-errors-compiling-lwt_.patch
 	patches.suse/selftests-bpf-Fix-error-compiling-tc_redirect.c-with.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
