--- a/series.conf
+++ b/series.conf
@@ -28340,6 +28340,7 @@
 	patches.suse/selftests-bpf-Fix-error-compiling-test_lru_map.c.patch
 	patches.suse/selftests-bpf-Fix-C-compile-error-from-missing-_Bool.patch
 	patches.suse/selftests-bpf-Fix-redefinition-errors-compiling-lwt_.patch
+	patches.suse/selftests-bpf-Fix-compile-if-backtrace-support-missi.patch
 	patches.suse/selftests-bpf-Fix-error-compiling-tc_redirect.c-with.patch
 	patches.suse/samples-bpf-Fix-compilation-errors-with-cf-protectio.patch
 	patches.suse/bpf-correctly-handle-malformed-BPF_CORE_TYPE_ID_LOCA.patch
