selftests/bpf: Fix cross-compiling urandom_read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -28898,6 +28898,7 @@
 	patches.suse/bpf-Fix-memory-leak-in-bpf_core_apply.patch
 	patches.suse/bpf-use-kvzmalloc-to-allocate-BPF-verifier-environme.patch
 	patches.suse/bpf-fix-kfunc-btf-caching-for-modules.patch
+	patches.suse/selftests-bpf-Fix-cross-compiling-urandom_read.patch
 	patches.suse/bpf-Fix-truncation-bug-in-coerce_reg_to_size_sx.patch
 	patches.suse/selftests-bpf-Add-test-for-truncation-after-sign-ext.patch
 	patches.suse/selftests-bpf-Add-test-for-sign-extension-in-coerce_.patch
