selftests/bpf: Fix backtrace printing for selftests crashes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -29442,6 +29442,7 @@
 	patches.suse/firmware-arm_scpi-Check-the-DVFS-OPP-count-returned-.patch
 	patches.suse/soc-fsl-rcpm-fix-missing-of_node_put-in-copy_ippdexp.patch
 	patches.suse/soc-fsl-cpm1-qmc-Set-the-ret-error-code-on-platform_.patch
+	patches.suse/selftests-bpf-Fix-backtrace-printing-for-selftests-c.patch
 	patches.suse/bpf-Prevent-tailcall-infinite-loop-caused-by-freplac.patch
 	patches.suse/bpf-arm64-Remove-garbage-frame-for-struct_ops-trampoline.patch
 	patches.suse/bpf-handle-implicit-declaration-of-function-gettid-i.patch
