--- a/series.conf
+++ b/series.conf
@@ -1040,6 +1040,10 @@
 	patches.suse/docs-kdoc-handle-the-obsolescensce-of-docutils.Error.patch
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
+	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
+
+	# netdev/net main
+	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
 	########################################################
 	# end of sorted patches
@@ -1058,9 +1062,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
-	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
 	patches.suse/wifi-iwlwifi-Add-missing-firmware-info-for-bz-b0-mod.patch
-	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
