NFSD: Replace use of NFSD_MAY_LOCK in nfsd4_lock() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1987,6 +1987,7 @@
 	patches.suse/svcrdma-Address-an-integer-overflow.patch
 	patches.suse/nfsd-drop-inode-parameter-from-nfsd4_change_attribute.patch
 	patches.suse/nfsd-Fix-NFSD_MAY_BYPASS_GSS-and-NFSD_MAY_BYPASS_GSS_ON_ROOT.patch
+	patches.suse/NFSD-Replace-use-of-NFSD_MAY_LOCK-in-nfsd4_lock.patch
 	patches.suse/NFSD-Remove-a-never-true-comparison.patch
 	patches.suse/NFSD-Prevent-NULL-dereference-in-nfsd4_process_cb_update.patch
 	patches.suse/NFSD-Cap-the-number-of-bytes-copied-by-nfs4_reset_recoverydir.patch
