--- a/series.conf
+++ b/series.conf
@@ -1988,6 +1988,7 @@
 	patches.suse/nfsd-drop-inode-parameter-from-nfsd4_change_attribute.patch
 	patches.suse/nfsd-Fix-NFSD_MAY_BYPASS_GSS-and-NFSD_MAY_BYPASS_GSS_ON_ROOT.patch
 	patches.suse/NFSD-Replace-use-of-NFSD_MAY_LOCK-in-nfsd4_lock.patch
+	patches.suse/nfsd-refine-and-rename-NFSD_MAY_LOCK.patch
 	patches.suse/NFSD-Remove-a-never-true-comparison.patch
 	patches.suse/NFSD-Prevent-NULL-dereference-in-nfsd4_process_cb_update.patch
 	patches.suse/NFSD-Cap-the-number-of-bytes-copied-by-nfs4_reset_recoverydir.patch
