powerpc/fadump: skip parameter area allocation when fadump is disabled (jsc#PED-9891 git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12567,6 +12567,7 @@
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
+	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
 	########################################################
 	# end of sorted patches
