PCI: vmd: Override irq_startup()/irq_shutdown() in vmd_init_dev_msi_info() (bsc#1252291).

--- a/series.conf
+++ b/series.conf
@@ -1041,6 +1041,7 @@
 	patches.suse/Revert-fs-make-vfs_fileattr_-get-set-return-EOPNOTSU.patch
 	patches.suse/fs-return-EOPNOTSUPP-from-file_setattr-file_getattr-.patch
 	patches.suse/Revert-io_uring-rw-drop-EOPNOTSUPP-check-in-__io_com.patch
+	patches.suse/PCI-vmd-Override-irq_startup-irq_shutdown-in-vmd_init.patch
 
 	# netdev/net main
 	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
