--- a/series.conf
+++ b/series.conf
@@ -33263,6 +33263,7 @@
 	patches.suse/coresight-holding-cscfg_csdev_lock-while-removing-cs.patch
 	patches.suse/coresight-prevent-deactivate-active-config-while-ena.patch
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
+	patches.suse/serial-jsm-fix-NPE-during-jsm_uart_port_init.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-typec-tcpm-allow-to-use-sink-in-accessory-mode.patch
