cpuidle: governors: menu: Avoid using invalid recent intervals data (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34134,6 +34134,7 @@
 	patches.suse/netfilter-nf_tables-reject-duplicate-device-on-updates.patch
 	patches.suse/net-sched-ets-use-old-nbands-while-purging-unused-classes.patch
 	patches.suse/net-usb-asix_devices-add-phy_mask-for-ax88772-mdio-b.patch
+	patches.suse/cpuidle-governors-menu-Avoid-using-invalid-recent-intervals-data.patch
 	patches.suse/ACPI-processor-perflib-Move-problematic-pr-performan.patch
 	patches.suse/smb-client-fix-race-with-concurrent-opens-in-rename-2-.patch
 	patches.suse/soc-tegra-pmc-Ensure-power-domains-are-in-a-known-st.patch
