--- a/series.conf
+++ b/series.conf
@@ -34472,6 +34472,7 @@
 	patches.suse/i2c-designware-Add-disabling-clocks-when-probe-fails.patch
 	patches.suse/i3c-Fix-default-I2C-adapter-timeout-value.patch
 	patches.suse/i3c-master-svc-Recycle-unused-IBI-slot.patch
+	patches.suse/cpufreq-scmi-Account-for-malformed-DT-in-scmi_dev_used_by_cpus.patch
 	patches.suse/cpufreq-intel_pstate-Fix-object-lifecycle-issue-in-update_qos_request.patch
 	patches.suse/PM-devfreq-mtk-cci-Fix-potential-error-pointer-deref.patch
 	patches.suse/cpuidle-qcom-spm-fix-device-and-OF-node-leaks-at-probe.patch
