dpll: zl3073x: Handle missing or corrupted flash configuration (bsc#1252253).

--- a/series.conf
+++ b/series.conf
@@ -55973,6 +55973,7 @@
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/dpll-zl3073x-Increase-maximum-size-of-flash-utility.patch
+	patches.suse/dpll-zl3073x-Handle-missing-or-corrupted-flash-confi.patch
 
 	########################################################
 	# end of sorted patches
