--- a/series.conf
+++ b/series.conf
@@ -55000,6 +55000,7 @@
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/ipv6-prevent-infinite-loop-in-rt6_nlmsg_size.patch
 	patches.suse/ipv6-fix-possible-infinite-loop-in-fib6_info_uses_de.patch
+	patches.suse/dpll-zl3073x-Fix-build-failure.patch
 	patches.suse/bpf-Make-reg_not_null-true-for-CONST_PTR_TO_MAP.patch
 	patches.suse/selftests-bpf-Add-cmp_map_pointer_with_const-test.patch
 	patches.suse/selftests-bpf-Add-test-cases-with-CONST_PTR_TO_MAP-n.patch
