--- a/series.conf
+++ b/series.conf
@@ -55811,6 +55811,7 @@
 	patches.suse/dpll-zl3073x-Add-low-level-flash-functions.patch
 	patches.suse/dpll-zl3073x-Add-firmware-loading-functionality.patch
 	patches.suse/dpll-zl3073x-Refactor-DPLL-initialization.patch
+	patches.suse/dpll-zl3073x-Implement-devlink-flash-callback.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
