dpll: zl3073x: Add functions to access hardware registers (bsc#1252253).

--- a/series.conf
+++ b/series.conf
@@ -55807,6 +55807,7 @@
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
 	patches.suse/wifi-mwifiex-send-world-regulatory-domain-to-driver.patch
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
+	patches.suse/dpll-zl3073x-Add-functions-to-access-hardware-regist.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mac80211-fix-Rx-packet-handling-when-pubsta-inf.patch
 	patches.suse/wifi-rtlwifi-rtl8192cu-Don-t-claim-USB-ID-07b8-8188.patch
