--- a/series.conf
+++ b/series.conf
@@ -55305,6 +55305,7 @@
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
 	patches.suse/net-packet-fix-a-race-in-packet_set_ring-and-packet_.patch
 	patches.suse/net-sched-mqprio-fix-stack-out-of-bounds-write-in-tc.patch
+	patches.suse/dpll-zl3073x-ZL3073X_I2C-and-ZL3073X_SPI-should-depe.patch
 	patches.suse/pptp-fix-pptp_xmit-error-path.patch
 	patches.suse/pNFS-Fix-uninited-ptr-deref-in-block-scsi-layout.patch
 	patches.suse/pNFS-Handle-RPC-size-limit-for-layoutcommits.patch
