--- a/series.conf
+++ b/series.conf
@@ -54950,6 +54950,7 @@
 	patches.suse/wifi-iwlwifi-mvm-set-gtk-id-also-in-older-FWs.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-set-esync-on-pins.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-phase-offset-on-conn.patch
+	patches.suse/dpll-zl3073x-Add-support-to-get-fractional-frequency.patch
 	patches.suse/et131x-Add-missing-check-after-DMA-map.patch
 	patches.suse/net-usb-cdc-ncm-check-for-filtering-capability.patch
 	patches.suse/xfrm-Duplicate-SPI-Handling.patch
