blacklist.conf: kABI

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -559,3 +559,4 @@ d3f2a9587ebe68f5067f9ff624f9a83dfb911f60 # build fix only
 13d750c2c03e9861e15268574ed2c239cca9c9d5 # related to allowing system call enter/exit instrumentation to handle page faults, which is not present in this codestream
 1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
+47b2116e54b4a854600341487e8b55249e926324 # required infrastructure highly invasive and breaks kABI
