--- a/blacklist.conf
+++ b/blacklist.conf
@@ -560,3 +560,5 @@ d3f2a9587ebe68f5067f9ff624f9a83dfb911f60 # build fix only
 1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
 47b2116e54b4a854600341487e8b55249e926324 # required infrastructure highly invasive and breaks kABI
+42988380ac67c76bb9dff8f77d7ef3eefd50b7b5 # required infrastructure highly invasive and breaks kABI
+
