- dpll: Make ZL3073X invisible (bsc#1252253). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -55299,6 +55299,7 @@
 	patches.suse/net-phy-smsc-add-proper-reset-flags-for-LAN8710A.patch
 	patches.suse/pptp-ensure-minimal-skb-length-in-pptp_xmit.patch
 	patches.suse/netlink-avoid-infinite-retry-looping-in-netlink_unic.patch
+	patches.suse/dpll-Make-ZL3073X-invisible.patch
 	patches.suse/ipv6-reject-malicious-packets-in-ipv6_gso_segment.patch
 	patches.suse/net-drop-UFO-packets-in-udp_rcv_segment.patch
 	patches.suse/net-sched-taprio-enforce-minimum-value-for-picos_per.patch
