blacklist.conf: no code change

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1070,3 +1070,5 @@ f6c3c83db1d939ebdb8c8922748ae647d8126d91 # test fix for CONFIG_FTRACE_SYSCALLS=n
 1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
 fa582ca7e187a15e772e6a72fe035f649b387a60 # irrelevant in our configurations
+44059790a5cb9258ae6137387e4c39b717fd2ced # pure cleanup
+
