blacklist.conf: irrelevant in our configs

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1071,4 +1071,4 @@ f6c3c83db1d939ebdb8c8922748ae647d8126d91 # test fix for CONFIG_FTRACE_SYSCALLS=n
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
 fa582ca7e187a15e772e6a72fe035f649b387a60 # irrelevant in our configurations
 44059790a5cb9258ae6137387e4c39b717fd2ced # pure cleanup
-
+a4f0866e3dbbf3fee4078bce0b78d65a0875c0bc # build stuff only
