usbnet: Fix using smp_processor_id() in preemptible code warnings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34695,6 +34695,7 @@
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
+	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
 
 	########################################################
 	# end of sorted patches
