r8152: add error handling in rtl8152_driver_init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34696,6 +34696,7 @@
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
+	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
 
 	########################################################
 	# end of sorted patches
