net: usb: lan78xx: fix use of improperly initialized dev->chipid in lan78xx_reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34698,6 +34698,7 @@
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/usbnet-Fix-using-smp_processor_id-in-preemptible-cod.patch
 	patches.suse/r8152-add-error-handling-in-rtl8152_driver_init.patch
+	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
 
 	########################################################
 	# end of sorted patches
