--- a/series.conf
+++ b/series.conf
@@ -29689,6 +29689,7 @@
 	patches.suse/KVM-x86-mmu-Skip-the-try-unsync-path-iff-the-old-SPT.patch
 	patches.suse/KVM-x86-Fix-a-comment-inside-__kvm_set_or_clear_apic.patch
 	patches.suse/KVM-x86-AMD-s-IBPB-is-not-equivalent-to-Intel-s-IBPB.patch
+	patches.suse/KVM-x86-Bypass-register-cache-when-querying-CPL-from.patch
 	patches.suse/KVM-x86-drop-x86.h-include-from-cpuid.h.patch
 	patches.suse/KVM-x86-Route-non-canonical-checks-in-emulator-throu.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_MSR-and-X86EMUL_F_DT_LOAD-to-a.patch
