--- a/series.conf
+++ b/series.conf
@@ -11254,6 +11254,7 @@
 	patches.suse/wifi-iwlwifi-mvm-set-gtk-id-also-in-older-FWs.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-set-esync-on-pins.patch
 	patches.suse/dpll-zl3073x-Add-support-to-get-phase-offset-on-conn.patch
+	patches.suse/dpll-zl3073x-Add-support-to-get-fractional-frequency.patch
 	patches.suse/net-usb-cdc-ncm-check-for-filtering-capability.patch
 	patches.suse/virtchnl2-rename-enum-virtchnl2_cap_rss.patch
 	patches.suse/virtchnl2-add-flow-steering-support.patch
