--- a/series.conf
+++ b/series.conf
@@ -12579,6 +12579,7 @@
 	patches.suse/rtc-x1205-Fix-Xicor-X1205-vendor-prefix.patch
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
+	patches.suse/dpll-zl3073x-Increase-maximum-size-of-flash-utility.patch
 
 	########################################################
 	# end of sorted patches
