dpll: zl3073x: Add support to get/set esync on pins (bsc#1252253).

--- a/series.conf
+++ b/series.conf
@@ -11252,6 +11252,7 @@
 	patches.suse/wifi-cfg80211-Fix-interface-type-validation.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-scan-request-validation.patch
 	patches.suse/wifi-iwlwifi-mvm-set-gtk-id-also-in-older-FWs.patch
+	patches.suse/dpll-zl3073x-Add-support-to-get-set-esync-on-pins.patch
 	patches.suse/net-usb-cdc-ncm-check-for-filtering-capability.patch
 	patches.suse/virtchnl2-rename-enum-virtchnl2_cap_rss.patch
 	patches.suse/virtchnl2-add-flow-steering-support.patch
