--- a/series.conf
+++ b/series.conf
@@ -12372,6 +12372,7 @@
 	patches.suse/wifi-iwlwifi-Remove-redundant-header-files.patch
 	patches.suse/dpll-zl3073x-Add-functions-to-access-hardware-regist.patch
 	patches.suse/dpll-zl3073x-Add-low-level-flash-functions.patch
+	patches.suse/dpll-zl3073x-Add-firmware-loading-functionality.patch
 	patches.suse/wifi-mt76-fix-potential-memory-leak-in-mt76_wmac_pro.patch
 	patches.suse/wifi-mt76-mt7996-Fix-RX-packets-configuration-for-pr.patch
 	patches.suse/wifi-mt76-mt7996-Convert-mt7996_wed_rro_addr-to-LE.patch
