--- a/series.conf
+++ b/series.conf
@@ -30547,6 +30547,7 @@
 	patches.suse/net-ipv6-rpl_iptunnel-mitigate-2-realloc-issue.patch
 	patches.suse/net_sched-sch_sfq-don-t-allow-1-packet-limit.patch
 	patches.suse/rxrpc-Fix-handling-of-received-connection-abort.patch
+	patches.suse/net-usb-lan78xx-Add-error-handling-to-lan78xx_init_m.patch
 	patches.suse/net-smc-support-ipv4-mapped-ipv6-addr-client-for-smc-r-v2.patch
 	patches.suse/inetpeer-remove-create-argument-of-inet_getpeer_v-46.patch
 	patches.suse/inetpeer-update-inetpeer-timestamp-in-inet_getpeer.patch
