ixgbe: handle IXGBE_VF_FEATURES_NEGOTIATE mbox cmd (bsc#1247222).

--- a/series.conf
+++ b/series.conf
@@ -55977,6 +55977,7 @@
 	patches.suse/ixgbevf-fix-getting-link-speed-data-for-E610-devices.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_GET_PF_LINK_STATE-mailbox-oper.patch
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
+	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
 
 	########################################################
 	# end of sorted patches
