ixgbe: fix too early devlink_free() in ixgbe_remove() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55978,6 +55978,7 @@
 	patches.suse/ixgbe-handle-IXGBE_VF_GET_PF_LINK_STATE-mailbox-oper.patch
 	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_FEATURES_NEGOTIATE-mbox-cmd.patch
+	patches.suse/ixgbe-fix-too-early-devlink_free-in-ixgbe_remove.patch
 
 	########################################################
 	# end of sorted patches
