ixgbevf: fix getting link speed data for E610 devices (bsc#1247222).

--- a/series.conf
+++ b/series.conf
@@ -55974,6 +55974,7 @@
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/dpll-zl3073x-Increase-maximum-size-of-flash-utility.patch
 	patches.suse/dpll-zl3073x-Handle-missing-or-corrupted-flash-confi.patch
+	patches.suse/ixgbevf-fix-getting-link-speed-data-for-E610-devices.patch
 
 	########################################################
 	# end of sorted patches
