--- a/series.conf
+++ b/series.conf
@@ -12583,6 +12583,7 @@
 	patches.suse/dpll-zl3073x-Handle-missing-or-corrupted-flash-confi.patch
 	patches.suse/ixgbevf-fix-getting-link-speed-data-for-E610-devices.patch
 	patches.suse/ixgbe-handle-IXGBE_VF_GET_PF_LINK_STATE-mailbox-oper.patch
+	patches.suse/ixgbevf-fix-mailbox-API-compatibility-by-negotiating.patch
 
 	########################################################
 	# end of sorted patches
