ovl: Always reevaluate the file signature for IMA (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6425,6 +6425,7 @@
 	patches.suse/scsi-sg-Fix-checking-return-value-of-blk_get_qu.patch
 	patches.suse/nfsd-Remove-incorrect-check-in-nfsd4_validate_s.patch
 	patches.suse/x86-traps-Fix-load_unaligned_zeropad-handling-f.patch
+	patches.suse/ovl-Always-reevaluate-the-file-signature-for-IMA.patch
 	patches.suse/mm-suppress-mm-fault-logging-if-fatal-signal-al.patch
 	patches.suse/ksmbd-check-if-a-mount-point-is-crossed-during-.patch
 	patches.suse/platform-x86-amd-pmc-Use-release_mem_region-to-undo-.patch
