--- a/series.conf
+++ b/series.conf
@@ -35349,6 +35349,7 @@
 	patches.kabi/atm-atmtcp-Prevent-arbitrary-write-in-atmtcp_recv_co.patch
 	patches.kabi/usb-xhci-Limit-Stop-Endpoint-retries.patch
 	patches.kabi/kabi-hide-new-member-allow_subflows-in-struct-mptcp_.patch
+	patches.kabi/KVM-x86-Snapshot-the-host-s-DEBUGCTL-in-common-x86.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
