--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1207,3 +1207,4 @@ f6c3c83db1d939ebdb8c8922748ae647d8126d91 # test fix for CONFIG_FTRACE_SYSCALLS=n
 13d750c2c03e9861e15268574ed2c239cca9c9d5 # related to allowing system call enter/exit instrumentation to handle page faults, which is not present in this codestream
 1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
+42ef0e944b0119e9987819af0a5a04d32d5e5edf # not backported
