blacklist.conf: false positive

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1208,3 +1208,5 @@ f6c3c83db1d939ebdb8c8922748ae647d8126d91 # test fix for CONFIG_FTRACE_SYSCALLS=n
 1bd13edbbed6e7e396f1aab92b224a4775218e68 # new feature, not a bug fix
 66fc6f521a0b91051ce6968a216a30bc52267bf8 # new feature, not a bug fix
 42ef0e944b0119e9987819af0a5a04d32d5e5edf # not backported
+6aad7019f697ab0bed98eba737d19bd7f67713de # not backported
+
