--- a/series.conf
+++ b/series.conf
@@ -12938,6 +12938,7 @@
 	patches.suse/livepatch-Add-klp-convert-tool.patch
 	patches.suse/kbuild-modpost-integrate-klp-convert.patch
 	patches.suse/kbuild-modpost-Continue-processing-all-unresolved-symbols.patch
+	patches.suse/kbuild-modfinal-Link-livepatches-with-module-common-o.patch
 	patches.suse/livepatch-Add-sample-livepatch-module.patch
 
 	########################################################
