KVM: x86: Clear pv_unhalted on all transitions to KVM_MP_STATE_RUNNABLE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31581,6 +31581,7 @@
 	patches.suse/arm64-errata-Add-newer-ARM-cores-to-the-spectre_bhb_loop_affected-lists.patch
 	patches.suse/KVM-x86-Wake-vCPU-for-PIC-interrupt-injection-iff-a-.patch
 	patches.suse/KVM-x86-Introduce-kvm_set_mp_state.patch
+	patches.suse/KVM-x86-Clear-pv_unhalted-on-all-transitions-to-KVM_.patch
 	patches.suse/KVM-nVMX-Check-PAUSE_EXITING-not-BUS_LOCK_DETECTION-.patch
 	patches.suse/KVM-nSVM-Pass-next-RIP-not-current-RIP-for-nested-VM.patch
 	patches.suse/KVM-nVMX-Allow-emulating-RDPID-on-behalf-of-L2.patch
