--- a/series.conf
+++ b/series.conf
@@ -31588,6 +31588,7 @@
 	patches.suse/KVM-x86-Don-t-inject-PV-async-PF-if-SEND_ALWAYS-0-an.patch
 	patches.suse/KVM-x86-Remove-the-unreachable-case-for-0x80000022-l.patch
 	patches.suse/KVM-VMX-Don-t-modify-guest-XFD_ERR-if-CR0.TS-1.patch
+	patches.suse/KVM-SVM-Inject-GP-if-memory-operand-for-INVPCID-is-n.patch
 	patches.suse/KVM-x86-Don-t-take-kvm-lock-when-iterating-over-vCPU.patch
 	patches.suse/KVM-x86-xen-Use-guest-s-copy-of-pvclock-when-startin.patch
 	patches.suse/KVM-arm64-vgic-v4-Only-attempt-vLPI-mapping-for-actu.patch
