perf hwmon_pmu: Fix uninitialized variable warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1046,6 +1046,9 @@
 	# netdev/net main
 	patches.suse/net-bonding-update-the-slave-array-for-broadcast-mod.patch
 
+	# out-of-tree patches
+	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
