perf hwmon_pmu: Fix uninitialized variable warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -63,6 +63,9 @@
 	# gregkh/usb usb-linus
 	patches.suse/usb-xhci-pci-Fix-USB2-only-root-hub-registration.patch
 
+	# out-of-tree patches
+	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
