perf hwmon_pmu: Fix uninitialized variable warning (perf-sle16-v6.13-userspace-update, git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12569,6 +12569,9 @@
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/powerpc-fadump-skip-parameter-area-allocation-when-fadump-is-disabled.patch
 
+	# out-of-tree patches
+	patches.suse/perf-hwmon_pmu-Fix-uninitialized-variable-warning.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
