fs/xattr.c: fix simple_xattr_list() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10315,6 +10315,7 @@
 	patches.suse/block-use-plug-request-list-tail-for-one-shot-backmerge-at.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/pidfs-never-refuse-ppid-0-in-PIDFD_GET_INFO.patch
+	patches.suse/fs-xattr.c-fix-simple_xattr_list.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
 	patches.suse/x86-fred-signal-Prevent-immediate-repeat-of-single-step-tr.patch
 	patches.suse/x86-virt-tdx-Avoid-indirect-calls-to-TDX-assembly-function.patch
