KVM: x86: Process "guest stopped request" once per guest time update (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31590,6 +31590,7 @@
 	patches.suse/KVM-VMX-Don-t-modify-guest-XFD_ERR-if-CR0.TS-1.patch
 	patches.suse/KVM-SVM-Inject-GP-if-memory-operand-for-INVPCID-is-n.patch
 	patches.suse/KVM-x86-Don-t-take-kvm-lock-when-iterating-over-vCPU.patch
+	patches.suse/KVM-x86-Process-guest-stopped-request-once-per-guest.patch
 	patches.suse/KVM-x86-xen-Use-guest-s-copy-of-pvclock-when-startin.patch
 	patches.suse/KVM-arm64-vgic-v4-Only-attempt-vLPI-mapping-for-actu.patch
 	patches.suse/KVM-arm64-vgic-v4-Fall-back-to-software-irqbypass-if.patch
