KVM: x86: Don't bleed PVCLOCK_GUEST_STOPPED across PV clocks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -31592,6 +31592,7 @@
 	patches.suse/KVM-x86-Don-t-take-kvm-lock-when-iterating-over-vCPU.patch
 	patches.suse/KVM-x86-Process-guest-stopped-request-once-per-guest.patch
 	patches.suse/KVM-x86-xen-Use-guest-s-copy-of-pvclock-when-startin.patch
+	patches.suse/KVM-x86-Don-t-bleed-PVCLOCK_GUEST_STOPPED-across-PV-.patch
 	patches.suse/KVM-arm64-vgic-v4-Only-attempt-vLPI-mapping-for-actu.patch
 	patches.suse/KVM-arm64-vgic-v4-Fall-back-to-software-irqbypass-if.patch
 	patches.suse/KVM-arm64-Tear-down-vGIC-on-failed-vCPU-creation.patch
