blacklist.conf: Add patches with CVE References

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1212,3 +1212,6 @@ eb50844d728f11e87491f7c7af15a4a737f1159d # kabi breakage
 42ef0e944b0119e9987819af0a5a04d32d5e5edf # not backported
 6aad7019f697ab0bed98eba737d19bd7f67713de # not backported
 8323c036789b8b4a61925fce439a89dba17b7f2f # not backported
+7f904ff6e58d398c4336f3c19c42b338324451f7 # CVE-2025-38636 https://bugzilla.suse.com/show_bug.cgi?id=1248676#c2
+fe24d5bc635e103a517ec201c3cb571eeab8be2f # CVE-2025-38625 https://bugzilla.suse.com/show_bug.cgi?id=1248611#c1
+cd4453c5e983cf1fd5757e9acb915adb1e4602b6 # CVE-2025-39914 https://bugzilla.suse.com/show_bug.cgi?id=1250701#c1
