net: hv_netvsc: fix loss of early receive events from host during channel open (bsc#1252265).

--- a/series.conf
+++ b/series.conf
@@ -50528,6 +50528,7 @@
 	patches.suse/use-uniform-permission-checks-for-all-mount-propagat.patch
 	patches.suse/net-smc-fix-UAF-on-smcsk-after-smc_listen_out.patch
 	patches.suse/net-hsr-reject-HSR-frame-if-skb-can-t-hold-tag.patch
+	patches.suse/msft-hv-3330-net-hv_netvsc-fix-loss-of-early-receive-events-from-.patch
 	patches.suse/HID-asus-fix-UAF-via-HID_CLAIMED_INPUT-validation.patch
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/Bluetooth-Fix-use-after-free-in-l2cap_sock_cleanup_l.patch
