proc: fix missing pde_set_flags() for net proc files (bsc#1248630)

--- a/series.conf
+++ b/series.conf
@@ -34333,6 +34333,7 @@
 	patches.suse/btrfs-fix-race-between-setting-last_dir_index_offset.patch
 	patches.suse/btrfs-avoid-load-store-tearing-races-when-checking-i.patch
 	patches.suse/ocfs2-prevent-release-journal-inode-after-journal-sh.patch
+	patches.suse/proc-fix-missing-pde_set_flags-for-net-proc-files.patch
 	patches.suse/mm-move-page-table-sync-declarations-to-linux-pgtabl.patch
 	patches.suse/mm-introduce-and-use-pgd-p4d-_populate_kernel.patch
 	patches.suse/x86-mm-64-define-ARCH_PAGE_TABLE_SYNC_MASK-and-arch_.patch
