--- a/series.conf
+++ b/series.conf
@@ -34408,6 +34408,7 @@
 	patches.suse/x86-vmscape-Warn-when-STIBP-is-disabled-with-SMT.patch
 	patches.suse/ocfs2-fix-recursive-semaphore-deadlock-in-fiemap-cal.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
+	patches.suse/proc-fix-type-confusion-in-pde_set_flags.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
 	patches.suse/net-phy-fix-phy_uses_state_machine.patch
