blk-zoned: Fix a lockdep complaint about recursive locking (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12012,6 +12012,7 @@
 	patches.suse/sctp-initialize-more-fields-in-sctp_v6_from_sk.patch
 	patches.suse/net-rose-fix-a-typo-in-rose_clear_routes.patch
 	patches.suse/io_uring-kbuf-always-use-READ_ONCE-to-read-ring-prov.patch
+	patches.suse/blk-zoned-Fix-a-lockdep-complaint-about-recursive-locking.patch
 	patches.suse/drm-xe-xe_sync-avoid-race-during-ufence-signaling.patch
 	patches.suse/drm-xe-vm-Clear-the-scratch_pt-pointer-on-error.patch
 	patches.suse/drm-xe-Don-t-trigger-rebind-on-initial-dma-buf-valid.patch
