block: avoid possible overflow for chunk_sectors check in blk_stack_limits() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11773,6 +11773,7 @@
 	patches.suse/ASoC-tas2781-Fix-the-wrong-step-for-TLV-on-tas2781.patch
 	patches.suse/gpio-mlxbf2-use-platform_get_irq_optional.patch
 	patches.suse/spi-cs42l43-Property-entry-should-be-a-null-terminat.patch
+	patches.suse/block-avoid-possible-overflow-for-chunk_sectors-check-in-b.patch
 	patches.suse/nvmet-initialize-discovery-subsys-after-debugfs-is-i.patch
 	patches.suse/block-ensure-discard_granularity-is-zero-when-discard-is-n.patch
 	patches.suse/md-make-rdev_addable-usable-for-rcu-mode.patch
