lib/sbitmap: convert shallow_depth from one word to the whole sbitmap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11778,6 +11778,7 @@
 	patches.suse/block-ensure-discard_granularity-is-zero-when-discard-is-n.patch
 	patches.suse/md-make-rdev_addable-usable-for-rcu-mode.patch
 	patches.suse/nvmet-exit-debugfs-after-discovery-subsystem-exits.patch
+	patches.suse/lib-sbitmap-convert-shallow_depth-from-one-word-to-the-who.patch
 	patches.suse/tools-power-turbostat-Fix-build-with-musl.patch
 	patches.suse/tools-power-turbostat-Handle-cap_get_proc-ENOSYS.patch
 	patches.suse/tools-power-turbostat-Fix-bogus-SysWatt-for-forked-p.patch
