block: fix kobject double initialization in add_disk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11820,6 +11820,7 @@
 	patches.suse/ALSA-usb-audio-Validate-UAC3-power-domain-descriptor.patch
 	patches.suse/ALSA-usb-audio-Validate-UAC3-cluster-segment-descrip.patch
 	patches.suse/io_uring-net-commit-partial-buffers-on-retry.patch
+	patches.suse/block-fix-kobject-double-initialization-in-add_disk.patch
 	patches.suse/xfs-fix-scrub-trace-with-null-pointer-in-quotacheck.patch
 	patches.suse/drm-bridge-fix-OF-node-leak.patch
 	patches.suse/drm-amdgpu-fix-vram-reservation-issue.patch
