--- a/series.conf
+++ b/series.conf
@@ -34509,6 +34509,7 @@
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
 	patches.suse/xfs-rename-the-old_crc-variable-in-xlog_recover_process.patch
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_followup.patch
+	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_strcasecmp.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
