--- a/series.conf
+++ b/series.conf
@@ -34694,6 +34694,7 @@
 	patches.suse/KVM-SEV-Validate-XCR0-provided-by-guest-in-GHCB.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
 	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
+	patches.suse/NFSD-Minor-cleanup-in-layoutcommit-processing.patch
 	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
 	patches.suse/nfsd-nfserr_jukebox-in-nlm_fopen-should-lead-to-a-retry.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
