--- a/series.conf
+++ b/series.conf
@@ -10952,6 +10952,7 @@
 	patches.suse/gfs2-No-more-self-recovery.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
+	patches.suse/nfsd-Use-correct-error-code-when-decoding-extents.patch
 	patches.suse/ceph-parse_longname-strrchr-expects-NUL-terminated-s.patch
 	patches.suse/fs-Prevent-file-descriptor-table-allocations-exceedi.patch
 	patches.suse/eventpoll-Fix-semi-unbounded-recursion.patch
