--- a/series.conf
+++ b/series.conf
@@ -12563,6 +12563,7 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 	patches.suse/sunrpc-fix-null-pointer-dereference-on-zero-length-checksum.patch
+	patches.suse/NFSD-Rework-encoding-and-decoding-of-nfsd4_deviceid.patch
 	patches.suse/NFSD-Fix-destination-buffer-size-in-nfsd4_ssc_setup_dul.patch
 	patches.suse/arm64-mte-Do-not-flag-the-zero-page-as-PG_mte_tagged.patch
 	patches.suse/clk-tegra-do-not-overallocate-memory-for-bpmp-clocks.patch
