xfs: rename the old_crc variable in xlog_recover_process (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12271,6 +12271,7 @@
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
 	patches.suse/writeback-Avoid-excessively-long-inode-switching-tim.patch
+	patches.suse/xfs-rename-the-old_crc-variable-in-xlog_recover_process.patch
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
