obsapi: prjconf generator

--- a/scripts/python/tests/api/test_repos.yaml
+++ b/scripts/python/tests/api/test_repos.yaml
@@ -311,6 +311,25 @@ Devel:Kernel:master:
       openSUSE.org:openSUSE:Factory:
         standard:
         - x86_64
+Devel:kGraft:patches:SLE15-SP7-RT_Update_0:
+  in:
+    SUSE:SLE-15-SP7:Update:Products:SLERT: "<project name=\"SUSE:SLE-15-SP7:Update:Products:SLERT\"\
+      >\n  <title>SLERT based on SLE 15-SP7</title>\n  <description>SLERT based on\
+      \ SLE 15-SP7</description>\n  <group groupid=\"autobuild-team\" role=\"maintainer\"\
+      />\n  <group groupid=\"autobuild-team\" role=\"reviewer\"/>\n  <group groupid=\"\
+      legal-auto\" role=\"reviewer\"/>\n  <group groupid=\"maintenance-team\" role=\"\
+      reviewer\"/>\n  <lock>\n    <enable/>\n  </lock>\n  <build>\n    <disable/>\n\
+      \  </build>\n  <publish>\n    <enable/>\n  </publish>\n  <debuginfo>\n    <enable/>\n\
+      \  </debuginfo>\n  <repository name=\"standard\">\n    <path project=\"SUSE:SLE-15-SP7:Update\"\
+      \ repository=\"standard\"/>\n    <arch>x86_64</arch>\n  </repository>\n  <repository\
+      \ name=\"images\">\n    <path project=\"SUSE:SLE-15-SP7:Update:Products:SLERT\"\
+      \ repository=\"standard\"/>\n    <arch>local</arch>\n    <arch>x86_64</arch>\n\
+      \  </repository>\n</project>\n"
+  out:
+    standard:
+      SUSE:SLE-15-SP7:Update:Products:SLERT:
+        standard:
+        - x86_64
 Kernel:HEAD:
   in:
     openSUSE:Factory: "<project name=\"openSUSE:Factory\">\n  <title>The next openSUSE\
