--- a/series.conf
+++ b/series.conf
@@ -34503,6 +34503,7 @@
 	patches.suse/hfsplus-fix-slab-out-of-bounds-read-in-hfsplus_uni2asc_followup.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tr.patch
 	patches.suse/arm64-cputype-Add-Neoverse-V3AE-definitions.patch
+	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/EDAC-i10nm-Skip-DIMM-enumeration-on-a-disabled-memor.patch
