--- a/series.conf
+++ b/series.conf
@@ -12270,6 +12270,7 @@
 	patches.suse/erofs-avoid-reading-more-for-fragment-maps.patch
 	patches.suse/seccomp-Fix-a-race-with-WAIT_KILLABLE_RECV-if-the-tracer-r.patch
 	patches.suse/arm64-cputype-Add-Neoverse-V3AE-definitions.patch
+	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
