--- a/series.conf
+++ b/series.conf
@@ -12527,6 +12527,7 @@
 	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-libsas-Add-dev_parent_is_expander-helper.patch
 	patches.suse/scsi-pm80xx-Use-dev_parent_is_expander-helper.patch
+	patches.suse/scsi-pm80xx-Add-helper-function-to-get-the-local-phy-id.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-due-to.patch
 	patches.suse/scsi-mpi3mr-Fix-controller-init-failure-on-fault-during-qu.patch
