scsi: core: sysfs: Correct sysfs attributes access rights (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11831,6 +11831,7 @@
 	patches.suse/drm-amdgpu-fix-vram-reservation-issue.patch
 	patches.suse/drm-amdgpu-fix-incorrect-vm-flags-to-map-bo.patch
 	patches.suse/drm-amdgpu-fix-task-hang-from-failed-job-submission-.patch
+	patches.suse/scsi-core-sysfs-Correct-sysfs-attributes-access-rights.patch
 	patches.suse/scsi-lpfc-Fix-wrong-function-reference-in-a-comment.patch
 	patches.suse/scsi-lpfc-Remove-redundant-assignment-to-avoid-memor.patch
 	patches.suse/ata-libata-scsi-Fix-CDL-control.patch
