scsi: mpt3sas: Fix crash in transport port remove by using ioc_info() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12557,6 +12557,7 @@
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
 	patches.suse/scsi-hpsa-Fix-potential-memory-leak-in-hpsa_big_passthru_i.patch
 	patches.suse/msft-hv-3348-scsi-storvsc-Remove-redundant-ternary-operators.patch
+	patches.suse/scsi-mpt3sas-Fix-crash-in-transport-port-remove-by-using-i.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
 	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
 	patches.suse/x86-tdx-Skip-clearing-reclaimed-pages-unless-X86_BUG_TDX_P.patch
