scsi: hpsa: Fix potential memory leak in hpsa_big_passthru_ioctl() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12555,6 +12555,7 @@
 	patches.suse/scsi-lpfc-Convert-debugfs-directory-counts-from-atom.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.4.0.11.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.4.0.11-patches.patch
+	patches.suse/scsi-hpsa-Fix-potential-memory-leak-in-hpsa_big_passthru_i.patch
 	patches.suse/msft-hv-3348-scsi-storvsc-Remove-redundant-ternary-operators.patch
 	patches.suse/x86-tdx-Eliminate-duplicate-code-in-tdx_clear_page.patch
 	patches.suse/x86-tdx-Tidy-reset_pamt-functions.patch
