scsi: aacraid: Stop using PCI_IRQ_AFFINITY (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11719,6 +11719,7 @@
 	patches.suse/selftests-perf_events-Add-a-mmap-correctness-test.patch
 	patches.suse/ata-libata-sata-Add-link_power_management_supported-.patch
 	patches.suse/scsi-mpt3sas-Fix-a-fw_event-memory-leak.patch
+	patches.suse/scsi-aacraid-Stop-using-PCI_IRQ_AFFINITY.patch
 	patches.suse/scsi-Revert-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 	patches.suse/scsi-ufs-core-Use-link-recovery-when-h8-exit-fails-during-.patch
 	patches.suse/scsi-ufs-ufs-pci-Fix-hibernate-state-transition-for-Intel-.patch
