--- a/series.conf
+++ b/series.conf
@@ -12524,6 +12524,7 @@
 	patches.suse/IB-sa-Fix-sa_local_svc_timeout_ms-read-race.patch
 	patches.suse/RDMA-rxe-Fix-race-in-do_task-when-draining.patch
 	patches.suse/RDMA-siw-Always-report-immediate-post-SQ-errors.patch
+	patches.suse/scsi-pm80xx-Fix-array-index-out-of-of-bounds-on-rmmod.patch
 	patches.suse/scsi-lpfc-use-min-to-improve-code.patch
 	patches.suse/scsi-mpi3mr-Fix-device-loss-during-enclosure-reboot-due-to.patch
 	patches.suse/scsi-mpi3mr-Fix-controller-init-failure-on-fault-during-qu.patch
