--- a/series.conf
+++ b/series.conf
@@ -11722,6 +11722,7 @@
 	patches.suse/scsi-aacraid-Stop-using-PCI_IRQ_AFFINITY.patch
 	patches.suse/scsi-Revert-scsi-iscsi-Fix-HW-conn-removal-use-after-free.patch
 	patches.suse/scsi-ufs-core-Use-link-recovery-when-h8-exit-fails-during-.patch
+	patches.suse/scsi-Fix-sas_user_scan-to-handle-wildcard-and-multi-channe.patch
 	patches.suse/scsi-ufs-ufs-pci-Fix-hibernate-state-transition-for-Intel-.patch
 	patches.suse/scsi-ufs-ufs-pci-Fix-default-runtime-and-system-PM-levels.patch
 	patches.suse/scsi-sd-Make-sd-shutdown-issue-START-STOP-UNIT-appropriate.patch
