--- a/series.conf
+++ b/series.conf
@@ -34570,6 +34570,7 @@
 	patches.suse/ACPICA-Fix-largest-possible-resource-descriptor-inde.patch
 	patches.suse/ACPI-processor-idle-Fix-memory-leak-when-register-cp.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-s.patch
+	patches.suse/ACPI-property-Disregard-references-in-data-only-subn.patch
 	patches.suse/ACPI-property-Do-not-pass-NULL-handles-to-acpi_attach_data.patch
 	patches.suse/ACPI-TAD-Add-missing-sysfs_remove_group-for-ACPI_TAD.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
