--- a/series.conf
+++ b/series.conf
@@ -34771,6 +34771,7 @@
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
+	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 
 	########################################################
