ASoC: nau8821: Add DMI quirk to bypass jack debounce circuit (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34772,6 +34772,7 @@
 	patches.suse/ASoC-codecs-Fix-gain-setting-ranges-for-Renesas-IDT8.patch
 	patches.suse/ASoC-nau8821-Cancel-jdet_work-before-handling-jack-e.patch
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
+	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 
 	########################################################
