--- a/series.conf
+++ b/series.conf
@@ -34630,6 +34630,7 @@
 	patches.suse/wifi-ath11k-fix-NULL-dereference-in-ath11k_qmi_m3_lo.patch
 	patches.suse/wifi-ath10k-avoid-unnecessary-wait-for-service-ready.patch
 	patches.suse/wifi-ath11k-HAL-SRNG-don-t-deinitialize-and-re-initi.patch
+	patches.suse/Bluetooth-btusb-Add-USB-ID-2001-332a-for-D-Link-AX9U.patch
 	patches.suse/Bluetooth-MGMT-Fix-not-exposing-debug-UUID-on-MGMT_O.patch
 	patches.suse/Bluetooth-ISO-Fix-possible-UAF-on-iso_conn_free.patch
 	patches.suse/Bluetooth-ISO-don-t-leak-skb-in-ISO_CONT-RX.patch
