can: netlink: can_changelink(): allow disabling of automatic restart (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -34774,6 +34774,7 @@
 	patches.suse/ASoC-nau8821-Generalize-helper-to-clear-IRQ-status.patch
 	patches.suse/ASoC-nau8821-Add-DMI-quirk-to-bypass-jack-debounce-c.patch
 	patches.suse/can-bxcan-bxcan_start_xmit-use-can_dev_dropped_skb-i.patch
+	patches.suse/can-netlink-can_changelink-allow-disabling-of-automa.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 
 	########################################################
