--- a/series.conf
+++ b/series.conf
@@ -34768,6 +34768,7 @@
 	patches.suse/net-usb-lan78xx-fix-use-of-improperly-initialized-de.patch
 	patches.suse/accel-qaic-Treat-remaining-0-as-error-in-find_and_ma.patch
 	patches.suse/ALSA-firewire-amdtp-stream-fix-enum-kernel-doc-warni.patch
+	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-deference-in-try_to_.patch
 	patches.suse/arm64-mm-avoid-always-making-PTE-dirty-in-pte_mkwrite.patch
 
 	########################################################
